--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -10,8 +10,12 @@ img
     width: 760px
 @media (max-width: 768px)
   .container
-    max-width: 580px
+    max-width: 566px
     width: 95%
+@media (max-width: 567px)
+  .container
+    max-width: 420px
+    width: 100%
 .button
   border-radius: 10px
   background-color: $main-color
