--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,8 @@ img {
       -ms-flex-align: center;
           align-items: center;
   text-align: right;
+  font-size: 13px;
+  font-weight: 400;
 }
 
 .navbar__address {
@@ -76,6 +78,10 @@ img {
 
 .navbar__button {
   margin-left: 30px;
+  margin-left-width: 170px;
+  height: 49px;
+  font-size: 13px;
+  font-weight: 400;
 }
 
 .navbar__phone {
