--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -8,11 +8,18 @@
     display: flex
     align-items: center
     text-align: right
+    font-size: 13px
+    font-weight: 400
   &__address
     display: flex
     flex-direction: column
+
   &__button
     margin-left: 30px
+        width: 170px
+    height: 49px
+    font-size: 13px
+    font-weight: 400
   &__phone
     display: inline-block
     color: $text-color
