--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,3 +1,11 @@
+@import 'fonts'
 @import 'colors'
 @import 'interface'
+/* Импорт стилей шапки */
 @import 'blocks/navbar'
+/* Стили для главного экрана */
+@import 'blocks/hero'
+/* Стили для блока offer */
+@import 'blocks/offer'
+/* Стили для модального окна */
+@import 'blocks/modal'
