--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,36 @@
+@charset "UTF-8";
+@font-face {
+  font-family: 'Museo Sans Light';
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-300.eot");
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-300.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSansCyrl/MuseoSansCyrl-300.woff") format("woff"), url("../fonts/MuseoSansCyrl/") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Museo Sans Bold';
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-700.eot");
+  src: url("../fonts/MuseoSansCyrl/MuseoSansCyrl-700.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSansCyrl/MuseoSansCyrl-700.woff") format("woff"), url("../fonts/MuseoSansCyrl/MuseoSansCyrl-700.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 body {
-  font-family: sans-serif;
+  font-family: 'Museo Sans Light', sans-serif;
+  font-weight: 300px;
 }
 
 img {
-  min-width: 100%;
+  max-width: 100%;
 }
 
 .container {
-  width: 1170px;
+  width: 1178px;
   margin: auto;
 }
 
@@ -19,15 +42,22 @@ img {
 
 @media (max-width: 768px) {
   .container {
-    max-width: 566px;
+    max-width: 580px;
     width: 95%;
   }
 }
 
 @media (max-width: 567px) {
   .container {
-    max-width: 420px;
-    width: 100%;
+    max-width: 400px;
+    width: 95%;
+  }
+}
+
+@media (max-width: 321px) {
+  .container {
+    max-width: 400px;
+    width: 86%;
   }
 }
 
@@ -35,9 +65,38 @@ img {
   border-radius: 10px;
   background-color: #ffd200;
   border: none;
-  padding: 18px 30px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700px;
 }
 
+.button:hover {
+  background-color: #ffdb33;
+  cursor: pointer;
+}
+
+.section {
+  padding: 67px 0;
+}
+
+.section-title {
+  font-size: 24px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700px;
+}
+
+.section-subtitle {
+  display: block;
+  font-size: 16px;
+}
+
+.input {
+  border: 1px solid #dddddd;
+  padding: 20px 26px;
+  font-size: 15px;
+  border-radius: 10px;
+}
+
+/* Импорт стилей шапки */
 .navbar {
   padding: 8px 0;
 }
@@ -80,15 +139,17 @@ img {
   margin-left: 30px;
   width: 170px;
   height: 49px;
-  font-size: 13px;
-  font-weight: 400;
+  font-size: 14px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700px;
 }
 
 .navbar__phone {
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700px;
   display: inline-block;
   color: #333333;
   font-size: 20px;
-  font-weight: 400;
   text-decoration: none;
   margin-top: 10px;
 }
@@ -104,5 +165,342 @@ img {
   .navbar__logo {
     width: 90px;
   }
+}
+
+@media (max-width: 320px) {
+  .navbar__button {
+    width: auto;
+    height: auto;
+    margin: 0;
+    font-size: 10px;
+  }
+}
+
+/* Стили для главного экрана */
+.hero {
+  padding: 50px 0;
+  background-color: #f5f5f5;
+}
+
+.hero-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hero-text {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding-right: 60px;
+}
+
+.hero-text__title {
+  font-size: 41px;
+  font-weight: 800;
+  line-height: 55px;
+  margin-bottom: 50px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700px;
+}
+
+.hero-text__subtitle {
+  display: inline-block;
+  font-size: 20px;
+  margin-bottom: 70px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700px;
+}
+
+.hero-image__img {
+  -webkit-box-shadow: 7px 5px 10px rgba(0, 0, 0, 0.05), 16px 22px 35px rgba(0, 0, 0, 0.05);
+          box-shadow: 7px 5px 10px rgba(0, 0, 0, 0.05), 16px 22px 35px rgba(0, 0, 0, 0.05);
+}
+
+.hero-list {
+  margin: 0;
+  padding: 0;
+}
+
+.hero-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 25px;
+}
+
+.hero-list__item:last-child {
+  margin-bottom: 0;
+}
+
+.hero-list__image {
+  width: 40px;
+  height: 40px;
+  border: 2px solid #ffd200;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+  margin-right: 30px;
+}
+
+.hero-list__text {
+  max-width: 300px;
+}
+
+@media (max-width: 1200px) {
+  .hero-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hero-list {
+    margin-bottom: 44px;
+  }
+  .hero-text {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .hero-text__title {
+    font-size: 24px;
+    line-height: 1.4;
+    margin-bottom: 15px;
+  }
+  .hero-text__subtitle {
+    font-size: 16px;
+    margin-bottom: 28px;
+  }
+  .hero-list__item {
+    margin-bottom: 20px;
+  }
+  .hero-list__text {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 450px) {
+  .hero-list__text {
+    max-width: 200px;
+  }
+}
+
+@media (max-width: 320px) {
+  .hero {
+    padding: 29px 0;
+  }
+  .hero-list__text {
+    max-width: 180px;
+  }
+  .hero-text {
+    padding-right: 0;
+  }
+  .hero-text__title {
+    margin-bottom: 4px;
+  }
+}
+
+/* Стили для блока offer */
+.offer {
+  background: url("../img/offer/offer-image.png") no-repeat;
+  background-position: center right;
+  -webkit-box-sizing: contain;
+          box-sizing: contain;
+  position: relative;
+}
+
+.offer:before {
+  content: '';
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+}
+
+.offer-block {
+  width: 50%;
+  padding-right: 90px;
+  position: relative;
+}
+
+.offer__title {
+  margin-top: 0;
+  margin-bottom: 24px;
+  display: inline-block;
+  width: 70%;
+}
+
+.offer__subtitle {
+  display: inline-block;
+  margin-bottom: 30px;
+  width: 50%;
+}
+
+.offer__input {
+  padding: 25px;
+  color: #999999;
+  border-radius: 10px;
+  border: 1px solid #dddddd;
+  width: 240px;
+}
+
+.offer__input:first-child {
+  margin-right: 10px;
+}
+
+.offer__button {
+  margin-top: 30px;
+  width: 100%;
+  min-height: 70px;
+}
+
+.offer-information {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 30px;
+  font-size: 15px;
+}
+
+.offer__callme {
+  display: inline-block;
+  width: 65%;
+}
+
+.offer__callyourself {
+  width: 45%;
+}
+
+.offer__phone {
+  text-decoration: none;
+  display: inline-block;
+  color: #333333;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700px;
+}
+
+@media (max-width: 1200px) {
+  .offer:before {
+    content: '';
+    width: 55%;
+  }
+  .offer-block {
+    padding-right: 0;
+    text-align: center;
+  }
+  .offer__title {
+    width: 100%;
+  }
+  .offer__subtitle {
+    width: 100%;
+  }
+  .offer__input {
+    width: 100%;
+  }
+  .offer__input:first-child {
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+  .offer-information {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .offer__callme {
+    width: 100%;
+  }
+  .offer__callyourself {
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .offer {
+    padding: 55px 0;
+  }
+  .offer-block {
+    width: 100%;
+    text-align: left;
+    line-height: 1.1;
+  }
+  .offer:before {
+    width: 100%;
+  }
+  .offer__title {
+    font-size: 20px;
+    line-height: 1.1;
+  }
+  .offer-information {
+    line-height: 1.7;
+  }
+}
+
+@media (max-width: 320px) {
+  .offer {
+    padding: 50px 0;
+  }
+  .offer__title {
+    font-size: 18px;
+    margin-bottom: 15px;
+    line-height: 1.4;
+  }
+  .offer__input:first-child {
+    margin-bottom: 12px;
+  }
+  .offer__button {
+    margin-top: 12px;
+  }
+}
+
+/* Стили для модального окна */
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+.modal_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal-dialog {
+  position: relative;
+  margin: auto;
+  max-width: 450px;
+  width: 90%;
+  min-width: 200px;
+  background-color: #fff;
+  padding: 40px;
+}
+
+.modal-dialog__close {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 /*# sourceMappingURL=style.css.map */
