--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,23 +1,46 @@
+*
+  box-sizing: border-box
 body
-  font-family: sans-serif
+  +reg
 img
-  min-width: 100%
+  max-width: 100%
 .container
-  width: 1170px
+  width: 1178px
   margin: auto
 @media (max-width: 1200px)
   .container
     width: 760px
 @media (max-width: 768px)
   .container
-    max-width: 566px
+    max-width: 580px
     width: 95%
 @media (max-width: 567px)
   .container
-    max-width: 420px
-    width: 100%
+    max-width: 400px
+    width: 95%
+@media (max-width: 321px)
+  .container
+    max-width: 400px
+    width: 86%
 .button
   border-radius: 10px
   background-color: $main-color
   border: none
-  padding: 18px 30px
+  
+  +bold
+  &:hover
+    background-color: lighten($main-color, 10%)
+    cursor: pointer
+.section
+  padding: 67px 0
+  &-title
+    font-size: 24px
+    +bold
+  &-subtitle
+    display: block
+    font-size: 16px
+.input  
+  border: 1px solid $border-input
+  padding: 20px 26px
+  font-size: 15px
+  border-radius: 10px
