--- a/src/sass/blocks/_navbar.sass
+++ b/src/sass/blocks/_navbar.sass
@@ -18,13 +18,13 @@
     margin-left: 30px
     width: 170px
     height: 49px
-    font-size: 13px
-    font-weight: 400
+    font-size: 14px
+    +bold
   &__phone
+    +bold
     display: inline-block
     color: $text-color
     font-size: 20px
-    font-weight: 400
     text-decoration: none
     margin-top: 10px
 @media (max-width: 768px)
@@ -36,3 +36,11 @@
       padding: 15px 26px
     &__logo
       width: 90px
+@media (max-width: 320px)
+  .navbar
+    &__button
+      width: auto
+      height: auto
+      margin: 0
+      font-size: 10px;
+    
